# WebtronicsTest

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deployment/: .env.sample  Dockerfile  alembic.ini  docker-compose.yml
migrations/: env.py
src/: main.py
src/api/exceptions/: __init__.py  exceptions.py  handlers.py
src/api/v1/: __init__.py  auth.py  healthcheck.py  post.py  user.py
src/core/: config.py  logs.py
src/core/exceptions/: __init__.py  repository.py
src/db/: __init__.py
src/db/sqlalch/: __init__.py
src/db/sqlalch/core/: __init__.py
src/db/sqlalch/models/: base.py  posts.py  user.py
src/infrastructure/database/: __init__.py  exception_mapper.py
src/infrastructure/database/core/: __init__.py  db.py  providers.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: f91872a1fff2_initial.py
src/infrastructure/database/models/: __init__.py  base.py  posts.py  user.py
src/infrastructure/database/repositories/: __init__.py  post.py  providers.py  user.py
src/models/dto/: user.py
src/models/http/: auth.py  post.py  user.py
src/models/internal/: post.py  user.py
src/repositories/: __init__.py  post.py  user.py
src/services/: __init__.py  auth.py  post.py  providers.py  user.py
src/utils/: auth.py
