[tool.poetry]
name = "webtronicstest"
version = "0.1.0"
description = ""
authors = ["kenki <ilsafganiev2222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
orjson = "^3.8.5"
aioredis = "^2.0.1"
SQLAlchemy = {extras = ["async"], version = "^1.4.46"}
email-validator = "^1.3.0"
PyJWT = "^2.6.0"
passlib = "^1.7.4"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
alembic = "^1.9.2"

[tool.poetry.dev-dependencies]
flake8-bugbear = "^23.1.14"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
isort = "^5.10.1"
yesqa = "^1.4.0"
pytest = "^7.2.1"
black = "^22.12.0"
dlint = "^0.13.0"
flake8 = "5.0.4"
pytest-asyncio = "^0.20.3"
aiohttp = "^3.8.3"
SQLAlchemy-Utils = "^0.39.0"
mypy = "^0.991"
types-passlib = "^1.7.7"
types-cryptography = "^3.3.23"
types-python-dateutil = "^2.8.19"
types-ujson = "^5.7.0"
sqlalchemy2-stubs = "^0.0.2-alpha.32"

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip = ["migrations"]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.venv
    | \.git
    | \.env*
    | migrations
    | tests
  )/
)
'''

[tool.mypy]
python_version = '3.10'
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = ['migrations']

[[tool.mypy.overrides]]
module = ['*.providers.*']
disable_error_code = 'empty-body'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
